perf(ops): run the three JVMs on compact object headers
Enables -XX:+UseCompactObjectHeaders on backend, frontend and ingest, and on
every image's AppCDS training run. 64-bit object headers instead of 96-bit: a
product option since JDK 25 (JEP 519) and the default from JDK 27 (JEP 534), so
the heap saving is taken on the LTS the stack already runs rather than waited
for. The stack is memory-constrained -- 14 160 MiB of declared limits against a
15.24 GiB host -- and this is the one lever that returns heap without taking any
away from an application.

The flag is set twice on purpose. A CDS archive records the object layout it was
dumped with and the JVM validates it at startup; the training run happens during
the image build, where JAVA_TOOL_OPTIONS does not exist; and a mismatch is NOT
caught by the ENTRYPOINT's `if [ -f ... ]` fallback, because the .jsa exists. The
JVM then rejects the archive ("does not equal the current
UseCompactObjectHeaders setting", "Loading dynamic archive failed") and starts
normally WITHOUT CDS -- a silent loss of the 30-50 % startup saving. Verified in
both directions on eclipse-temurin:25-jdk-alpine, and end to end with the real
backend jar: context refresh succeeds under the new layout, the archive is
produced (86 MB) and is accepted with the flag and rejected without it.

No memory limit and no MaxRAMPercentage changes with it. Every figure in the JVM
CONTAINER SIZING block was measured on 96-bit headers and is the *before* side of
this change, so the block gains a dated caveat and REQ-OPS-030 carries the
re-measurement obligation. One variable at a time -- the lesson of ADR-0175,
whose table had compared figures taken on two different collectors.

Also closes an open REQ-OPS-028 defect found on the way: ADR-0175 and the
requirement both list the backend as -XX:+UseG1GC, and the acceptance box was
ticked, but e401742db wrote the flag onto frontend and ingest only -- so the
busiest JVM in the stack was still on ergonomics, which picks 